# backend-pet

./: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
api/: openapi.json
backend_pet/: app.py  cli.py  config.py  contextvar_manager.py  database.py  dependencies.py  healpers.py
backend_pet/clients/e1/: __init__.py  api_client.py  entities.py
backend_pet/entities/: __init__.py  pet.py  shop.py
backend_pet/models/: __init__.py  common.py  pet.py  shop.py
backend_pet/repositories/: __init__.py  base.py  pet.py
backend_pet/services/: __init__.py  pet.py  shop.py
backend_pet/web/: app.py
backend_pet/web/core/: exception_handlers.py  logging.py  request_id.py  sentry.py
backend_pet/web/routes/: __init__.py  metrics.py
backend_pet/web/routes/v1/: __init__.py  pet.py  shop.py
migrations/: env.py
scripts/: entrypoint.sh
